# frostflake

./: .gitignore  CMakeLists.txt  README.md  app.rc  cocogoat-control.manifest  vcpkg.json  version.h
.github/workflows/: cmake.yml
MfcClass/: CMakeLists.txt  OGLWindow.h  Window.cpp  Window.h
lib/: dpiAware.h  httplib.h  libcurl.lib  libsodium.lib  semaphore11.h  sodium.h  struct.h
lib/MfcClass/: Button.cpp  Button.h  Control.cpp  Control.h  Manager.cpp  Manager.h  OGLWindow.cpp  TextView.cpp  TextView.h
lib/sodium/: export.h
src/: cvautotrack.cpp  cvautotrack.h  cvautotrackImpl.cpp  cvautotrackImpl.h  download.cpp  idleTimer.cpp  installer.cpp  knownApps.cpp  main.cpp  scheme.cpp  server.cpp  tokenVerify.cpp  tray.cpp  tray.h  ui.cpp  utils.cpp  ws.cpp  yas.cpp
